# get-all-uri-protocols

./: Cargo.toml
src/: lib.rs  main.rs
