[package]
name = "get-all-uri-protocols"
version = "0.1.0"
edition = "2021"
authors = ["Luna <luna@astolfo.uk>"]
description = "Get all URI protocols which you have installed on your pc."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg="0.10.1"