[package]
name = "get-all-uri-protocols"
version = "0.1.3"
edition = "2021"
authors = ["Luna <luna@astolfo.uk>"]
description = "Get all URI protocols which you have installed on your pc."
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winreg="0.10.1"

[package.metadata.docs.rs]
# This also sets the default target to `x86_64-pc-windows-msvc`
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]